compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_subprog_call_args_err_not_expr.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "type a : int\nprocedure boop(a, b : int, var c : int) end boop\nboop(1, a, a)\n"
---
"a"@"src/main.t:5..6" [Type]: alias[DefId(PackageId(0), LocalDefId(0))] of int
"boop"@"src/main.t:23..27" [Subprogram(Procedure)]: procedure ( pass(value) int, pass(value) int, pass(var ref) int, ) -> void
"a"@"src/main.t:28..29" [Param(Value, No)]: int
"b"@"src/main.t:31..32" [Param(Value, No)]: int
"c"@"src/main.t:44..45" [Param(Reference(Var), No)]: int
"<unnamed>"@"<unknown>:0..0" [Undeclared]: <error>
"<root>"@"<unknown>:0..0" [Module(No)]: <error>

error at src/main.t:70..71: cannot pass `a` to this parameter
| error for src/main.t:70..71: `a` is a reference to a type, not a variable
| note for src/main.t:5..6: `a` declared here
error at src/main.t:73..74: cannot pass `a` to this parameter
| error for src/main.t:73..74: `a` is a reference to a type, not a variable
| note for src/main.t:5..6: `a` declared here
