compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_subprog_call_as_expr_err.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "procedure lime() end lime\nvar res := lime()\n"
---
"lime"@"src/main.t:10..14" [Subprogram(Procedure)]: procedure ( ) -> void
"res"@"src/main.t:30..33" [ConstVar(Var, No)]: <error>
"<unnamed>"@"<unknown>:0..0" [Undeclared]: <error>
"<root>"@"<unknown>:0..0" [Module(No)]: <error>

error at src/main.t:37..41: cannot call procedure here
| error for src/main.t:37..41: procedure calls cannot be used as expressions
