compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_subprog_call_as_stmt_bare.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "function key : int end key\nprocedure lime end lime\nkey lime\nkey() lime()\n"
---
"key"@"src/main.t:9..12" [Subprogram(Function)]: function -> int
"lime"@"src/main.t:37..41" [Subprogram(Procedure)]: procedure -> void
"<root>"@"<unknown>:0..0" [Module(No)]: <error>
