compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_subprog_call_as_stmt_err.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "function key() : int end key\nprocedure lime() end lime\n% can't be used like this, need paren\nkey lime\n"
---
"key"@(FileId(1), 9..12) [Subprogram(Function)]: function ( ) -> int
"lime"@(FileId(1), 39..43) [Subprogram(Procedure)]: procedure ( ) -> void
"<unnamed>"@(dummy) [Undeclared]: <error>
"<unnamed>"@(dummy) [Undeclared]: <error>
"<root>"@(dummy) [Module(No)]: <error>

error in file FileId(1) at 93..96: cannot use `key` as a statement
| error in file FileId(1) for 93..96: `key` is callable, but requires adding `()` after here
error in file FileId(1) at 97..101: cannot use `lime` as a statement
| error in file FileId(1) for 97..101: `lime` is callable, but requires adding `()` after here
