compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__typeck_subprog_call_coerce_ref_arg_cheated.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "procedure p(var a : cheat real) end p\nvar i : int\np(i)\n"
---
"p"@"src/main.t:10..11" [Subprogram(Procedure)]: procedure ( pass(var ref) cheat real, ) -> void
"a"@"src/main.t:16..17" [Param(Reference(Var), No)]: real
"i"@"src/main.t:42..43" [ConstVar(Var, No)]: int
"<unnamed>"@"<unknown>:0..0" [Undeclared]: <error>
"<root>"@"<unknown>:0..0" [Module(No)]: <error>
